2010-10-07  Andy Buckley  <andy@insectnation.org>

	* Adding a --with-root flag to rivet-buildplugin to add
	root-config --libs flags to the plugin build command.

2010-09-24  Andy Buckley  <andy@insectnation.org>

	* Releasing as Rivet 1.3.0.

	* Bundling underscore.sty to fix problems with running make-plots
	on dat files generated by compare-histos from AIDA files with
	underscores in their names.

2010-09-16  Andy Buckley  <andy@insectnation.org>

	* Fix error in N_effective definition for weighted profile errors.

2010-08-18  Andy Buckley  <andy@insectnation.org>

	* Adding MC_GENERIC analysis. NB. Frank Siegert also added MC_HJETS.

2010-08-03  Andy Buckley  <andy@insectnation.org>

	* Fixing compare-histos treatment of what is now a ref file, and
	speeding things up... again. What a mess!

2010-08-02  Andy Buckley  <andy@insectnation.org>

	* Adding rivet-nopy: a super-simple Rivet C++ command line
	interface which avoids Python to make profiling and debugging
	easier.

	* Adding graceful exception handling to the AnalysisHandler event
	loop methods.

	* Changing compare-histos behaviour to always show plots for which
	there is at least one MC histo. The default behaviour should now
	be the correct one in 99% of use cases.

2010-07-30  Andy Buckley  <andy@insectnation.org>

	* Merging in a fix for shared_ptrs not being compared for
	insertion into a set based on raw pointer value.

2010-07-16  Andy Buckley  <andy@insectnation.org>

	* Adding an explicit library dependency declaration on libHepMC,
	and hence removing the -lHepMC from the rivet-config --libs
	output.

2010-07-14  Andy Buckley  <andy@insectnation.org>

	* Adding a manual section on use of Rivet (and AGILe) as
	libraries, and how to use the -config scripts to aid compilation.

	* FastJets projection now allows setting of a jet area definition,
	plus a hacky mapping for getting the area-enabled cluster
	sequence. Requested by Pavel Starovoitov & Paolo Francavilla.
