@@ -4,7 +4,7 @@
 
 #include "Rivet/Rivet.hh"
 #include "Rivet/Projection.hh"
-#include "Rivet/Projections/VetoedFinalState.hh"
+#include "Rivet/Projections/FinalState.hh"
 #include "Rivet/Particle.hh"
 #include "Rivet/Event.hh"
 #include "Rivet/Tools/Utils.hh"
@@ -17,7 +17,7 @@ namespace Rivet {
 
      Calculate the differential and integral jet shapes in \f$P_{\perp}\f$ for a given
      set of jet axes each event.
-  
+
      The rapidity scheme (\f$ \eta \f$ or \f$ y \f$) has to be specified when
      invoking the constructor.
 
@@ -37,13 +37,10 @@ namespace Rivet {
        \sum_\mathrm{jets} \frac{P_\perp(0, r)}{p_\perp(0, R)}
      \f]
      with \f$ 0 \le r \le R \f$ and \f$ P_\perp(r_1, r_2) = \sum_{\in [r_1, r_2)} p_\perp \f$.
-  
+
      The constructor expects also the equidistant binning in radius \f$ r \f$ to produce the
      jet shape of all bins in a vector and this separately for each jet to allow
      post-selection.
-
-     Internally, this projection uses the VetoedFinalState projection to determine the
-     jet shapes around the jet axes.
 
      The jet axes are passed for each event.
   */
@@ -57,7 +54,7 @@ namespace Rivet {
     //@{
 
     /// Constructor.
-    JetShape(const VetoedFinalState& vfsp, const vector<FourMomentum>& jetaxes,
+    JetShape(const FinalState& fs, const vector<FourMomentum>& jetaxes,
              double rmin=0.0, double rmax=0.7, double interval=0.1,
              double r1minPsi=0.3, DeltaRScheme distscheme=RAPIDITY);
 
@@ -72,25 +69,25 @@ namespace Rivet {
     /// Reset projection between events
     void clear();
 
- 
+
   public:
 
- 
+
     /// Number of equidistant radius bins.
     double numBins() const {
       return _nbins;
     }
- 
+
     /// \f$ r_\text{min} \f$ value.
     double rMin() const {
       return _rmin;
     }
- 
+
     /// \f$ r_\text{max} \f$ value.
     double rMax() const {
       return _rmax;
     }
- 
+
     /// Radius interval size.
     double interval() const {
       return _interval;
@@ -101,29 +98,29 @@ namespace Rivet {
     double diffJetShape(size_t pTbin, size_t rbin) const {
       return _diffjetshapes[pTbin][rbin];
     }
- 
+
     /// Return value of integrated jet shape profile histo bin.
     /// @todo Remove this external indexing thing
     double intJetShape(size_t pTbin, size_t rbin) const {
       return _intjetshapes[pTbin][rbin];
     }
- 
+
     /// Return value of \f$ \Psi \f$ (integrated jet shape) at given radius for a \f$ p_T \f$ bin.
     /// @todo Remove this external indexing thing
     double psi(size_t pTbin) const {
       return _PsiSlot[pTbin];
     }
- 
+
 
   protected:
- 
+
     /// Apply the projection to the event.
     void project(const Event& e);
- 
+
     /// Compare projections.
     int compare(const Projection& p) const;
 
-    
+
   private:
 
     /// The jet axes of the jet algorithm projection
